# ABD-december-big-data-challenge

./: .gitignore  README.md  config.json  config.py  convert_all_older_files.py  main.py  pyproject.toml
get_data/: __init__.py  get_coordinates.py  get_weather_data.py
schemas/: __init__.py  json_schema.py
tasks/: task_01.md  task_02.md  task_03.md  task_04.md
transform_data/: __init__.py  convert_json_to_parquet.py  transform_datas.py
utils/: extract.py  get_coordinates.py  get_weather_data.py  logger.py
