[tool.poetry]
name = "abd-december-big-data-challenge"
version = "0.1.0"
description = ""
authors = ["Rafał Kowalski <rafal.kowalski@rkowalski.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
requests = "^2.32.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
ignore-paths = '^.venv'